Bug fixed for social icons on mobile view

--- a/src/components/SocialIcons.module.css
+++ b/src/components/SocialIcons.module.css
@@ -1,16 +1,21 @@
 .container {
     position: absolute;
+    z-index: 2;
     bottom: 0;
     left: 0;
     display: flex;
     flex-direction: column;
     margin: 40px;
-    /* transition: 0.2s ease-in, */
 }
 
 .icon {
-    /* margin: calc(250vw / 1080); */
     margin: 18px
+}
+
+.icon:hover {
+    scale: 1.3;
+    color: white;
+    transition: 0.2s;
 }
 
 @media (max-width: 750px) {
